# vlsi-experimental

./: .gitignore  .travis.yml  README  README.md  buffer_insert  def.h  def_mn.h  expiration_list.c  fbi.ncb  main_mn.c  routing_tree.m  shili.c  tree.c  van_b.c  van_mn.c
itlPlace/: CMakeLists.txt  FindOpenCV.cmake  ResolveCompilerPaths.cmake  itlPlace.css
itlPlace/backup/bin-scripts/: CutLEF.py  CutLIB.py  check.py  clear.bat  run_iwls_gslib_one_iteration.bat  run_iwls_gslib_one_iteration_buf.bat  run_iwls_nangate_one_iteration.bat  run_iwls_nangate_one_iteration_buf.bat  unique.bat
itlPlace/backup/mac-input/: GSCLib_3.0.lib  IWLS_GP_019107_b20.def  LR.cfg  default.cfg  itlVLSI.cfg  tv80.def
itlPlace/backup/win-lib/: GlobExpSolver.lib  petsctaod_mpich2.lib  vcomp.lib
itlPlace/backup/win-make/: itlPlace.sln  itlPlace.vcproj
itlPlace/cfg/: APlace_weighting.cfg  Config_for_night_experiments.cfg  Config_for_night_experiments_aplace_weighting.cfg  HippocrateDP.cfg  JointPlacementBuffering.cfg  LR.cfg  NewBuffering.cfg  Sensitivity_guided_weighting.cfg  boris_hippocrate_ALL.cfg  default.cfg  hpwl_ispd04.cfg  hpwl_iwls05.cfg  itlVLSI.cfg
itlPlace/include/: AdaptiveRoute.h  AnalyticalPlacement.h  Auxiliary.h  BookshelfExport.h  Clustering.h  ClusteringData.h  DelayCalculation.h  DetailedPlacement.h  DetailedPlacementSwappers.h  ExportToRouters.h  FGR.h  FLUTERoute.h  GESW.h  GlobalPlacement.h  HPinsStorage.h  HippocratePlacement.h  LRSizing.h  LagrangianRelaxation.h  LagrangianRelaxationData.h  Legalization.h  Line.h  LogSumExp.h  MuCalculations.h  ObjectivesConstraints.h  OptimizationContext.h  Parser.h  PathFinder.h  PlacementQualityAnalyzer.h  PlacementStorage.h  Reporting.h  STA.h  SensitivityGuidedNetWeighting.h  SlidingWindow.h  Spreading.h  SpreadingData.h  TDDPAlgorithm4.h  TableFormatter.h  TileGrid.h  Timing.h  TimingHelpers.h  (+4 more)
itlPlace/include/3dParty/: LinearRegression.h
itlPlace/include/Buffering/: BufferInfo.h  Buffering.h  BufferingAlgorithm.h  BufferingAlgotithm.h  CriticalPathBuffering.h  GPBuffering.h  NetBufferingAlgorithm.h  NetInfo.h  NetListBufferingAlgorithm.h  VanGinneken.h  VanGinnekenAlgorithm.h  VanGinnekenData.h  VanGinnekenNode.h  VanGinnekenWires.h
itlPlace/include/DEF/: defiGroup.hpp  defiKRDefs.hpp  defiPartition.hpp  defiSite.hpp  defiUser.hpp
itlPlace/include/GlobalPlacement/: AnalyticalPlacement.h  AnalyticalPlacementReporting.h  BorderPenalty.h  Clustering.h  ClusteringData.h  LRSizing.h  LRSizingTimer.h  LagrangianRelaxation.h  LagrangianRelaxationData.h  LogSumExp.h  LogSumExpData.h  MuReporter.h  ObjectivesConstraints.h  OptimizationContext.h  Spreading.h  SpreadingData.h  SumOfDelays.h  SumOfDelaysData.h  TimingPointMus.h  WeightsRoutines.h
itlPlace/include/LEF/: FEF_malloc.h  LEF_FEF_stringhash.h  lefiMacro.hpp  lefwWriterCalls.hpp
itlPlace/include/Liberty/: alloca.h  attr_enum.h  liberty_parser.h  syntax_decls.h  unistd.h
itlPlace/include/Plotter/: OpenCVPlotter.h
itlPlace/include/config/: ConfigCache.h  ConfigContext.h  Configuration.h  libconfig.h++
itlPlace/include/data/: stdTypes.h
itlPlace/input/: Before relax  IWLS_GP_007161_tv80.def  Replicated_LR.cfg  Replicated_default.cfg  Replicated_itlVLSI.cfg  itlVLSI.cfg
itlPlace/lib/: petsctaod.lib
itlPlace/make/: itlPlace.sln  itlPlace.vcproj
itlPlace/scripts/: KOSHKI.py  clear.bat  itlPlaceCoreFuctions.py  itlPlaceEmail.py  itlPlaceGUI.py  itlPlaceParameters.py  itlPlaceScript.py  itlPlaceTestRunner.py  itlPlaceTry.py
itlPlace/src/: VLSIFlow.cpp  main.cpp
itlPlace/src/Auxiliary/: Auxiliary.cpp  OutputDump.cpp  PathFinder.cpp
itlPlace/src/Buffering/: BufferInfo.cpp  Buffering.cpp  GPBuffering.cpp  NetInfo.cpp  VanGinneken.cpp  VanGinneken2.cpp  VanGinnekenAlgorithm.cpp  VanGinnekenData.cpp  VanGinnekenDate.cpp  VanGinnekenNode.cpp
itlPlace/src/DEF/: FEF_malloc.cpp  FEF_stringhash.cpp  def.tab.cpp  def_keywords.cpp  defiAssertion.cpp  defiBlockage.cpp  defiComponent.cpp  defiDebug.cpp  defiFPC.cpp  defiFill.cpp  defiGroup.cpp  defiIOTiming.cpp  defiMisc.cpp  defiNet.cpp  defiNonDefault.cpp  defiPartition.cpp  defiPath.cpp  defiPinCap.cpp  defiPinProp.cpp  defiProp.cpp  defiPropType.cpp  defiRegion.cpp  defiRowTrack.cpp  defiScanchain.cpp  defiSite.cpp  defiSlot.cpp  defiTimingDisable.cpp  defiVia.cpp  defrReader.cpp  lex.cpph
itlPlace/src/Data/: HBaseDesignItem.cpp  HCell.cpp  HCluster.cpp  HClusteredNet.cpp  HCriticalPath.cpp  HCriticalPathPoint.cpp  HDPGrid.cpp  HDesign.cpp  HMacroType.cpp  HNet.cpp  HNetLevel.cpp  HPin.cpp  HPinType.cpp  HPlacementRow.cpp  HPlotter.cpp  HRoutingLayer.cpp  HSite.cpp  HWire.cpp  (+3 more)
itlPlace/technology/: GSCLib_3.0.lef
(+1255 files in other folders)
